--- a/frontend/src/components/searchbar/Searchbar.module.css
+++ b/frontend/src/components/searchbar/Searchbar.module.css
@@ -51,7 +51,7 @@
 
 .custom-box {
   width: 100%;
-  max-width: 800px;
+  max-width: 1000px;
 }
 
 .small-box {
